<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".EditFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_last_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:layout_constraintStart_toEndOf="@+id/et_first_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_email"
        android:hint="@string/email"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_email_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintBottom_toTopOf="@+id/et_phone"
        tools:listitem="@layout/email_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_add_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_address"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_email_list"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_email"
        android:hint="@string/phone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rv_email_list"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="+"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_phone_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/et_phone"
        tools:listitem="@layout/phone_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>